welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:8: error: value && is not a member of Unit
	if ((estAdo(a) && !estAdo(b))|(!estAdo(a)&&estAdo(b))) {
                       ^